# robotics-final-main

./: 1.12.perspective  README.md  deps2.html  show_center_depth.py
apriltag/.gitt/: config  index  packed-refs
apriltag/.gitt/logs/refs/heads/: master
apriltag/.gitt/objects/pack/: pack-c1029eb23869c20579d68c002af39e22c7e09b3a.idx
apriltag/.gitt/refs/heads/: master
apriltag_ros/.gitt/: config  index  packed-refs
apriltag_ros/.gitt/logs/refs/remotes/origin/: HEAD
apriltag_ros/.gitt/objects/pack/: pack-af70b4f9b174249f967e3d4c45a2829366445203.idx  pack-af70b4f9b174249f967e3d4c45a2829366445203.pack
apriltag_ros/.gitt/refs/heads/: master
kortex_gazebo_camera/: CMakeLists.txt  package.xml
kortex_gazebo_camera/launch/: pickplace.launch  start_gazebo.launch
kortex_gazebo_camera/robots/: gen3_camera_custom_gripper.xacro  kortex_robot_camera_custom_gripper.xacro
kortex_gazebo_camera/sensors/: kortex_realsense.xacro
mw_vision_example/: CMakeLists.txt  mw_vision_example.sh  mw_vision_example_2.sh
mw_vision_example/launch/: mw_vision_example_newstopsign.launch
mw_vision_example/models/sign_left/: model.sdf
mw_vision_example/worlds/: mw_vision_world.world  mw_vision_world_newstopsign.world
simple_controller/: package.xml
simple_controller/src/: 1.12.perspective  MR_2.py  SCD.py  aprilTagController.py  aprilTagDebug.py  controller.py  test.py
simple_controller/src/oold/: c-controller.py
turtlebot3_description/urdf/: turtlebot3_burger_omni.gazebo.xacro  turtlebot3_burger_omni.urdf.xacro
user_input/: CMakeLists.txt  package.xml
user_input/launch/: user.launch
user_input/msg/: JoyCmd.msg  Velocity.msg  Voxel.msg
user_input/src/: blobtest.py  example.py  image_processing.py  keyboard_process.py  odrive_driver.py  odrive_node.py  simple_socketio.py  test.py
user_input/src/templates/: camera.html
